--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
   "name": "electron-md-editor",
   "private": true,
+  "author": "Amane Misa",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:amane312/electron-md-editor.git"
+  },
+  "keywords": [
+    "Markdown",
+    "remark",
+    "CodeMirror",
+    "Electron",
+    "Vite",
+    "typescript"
+  ],
   "engines": {
     "node": ">=v16.13",
     "npm": ">=8.1"
   },
   "main": "packages/main/dist/index.cjs",
   "scripts": {
+    "buildEnvTypes": "node scripts/buildEnvTypes.js",
     "build": "node scripts/build.js",
     "precompile": "cross-env MODE=production npm run build",
     "compile": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
-    "pretest": "npm run build",
+    "pretest": "cross-env MODE=test npm run build",
     "test": "node tests/app.spec.js",
     "watch": "node scripts/watch.js",
-    "lint": "eslint . --ext js,ts,vue",
+    "lint": "eslint . --ext js,ts",
+    "pretypecheck": "npm run buildEnvTypes",
     "typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck-preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck-renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
+    "typecheck-renderer": "tsc --noEmit -p packages/renderer/tsconfig.json",
     "typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer"
   },
   "browserslist": [
@@ -30,25 +45,47 @@
     "*.{js,ts,vue}": "eslint --cache --fix"
   },
   "devDependencies": {
-    "@types/electron-devtools-installer": "2.2.0",
-    "@typescript-eslint/eslint-plugin": "5.4.0",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@vitejs/plugin-vue": "1.9.4",
-    "cross-env": "7.0.3",
-    "electron": "16.0.1",
-    "electron-builder": "22.14.5",
-    "electron-devtools-installer": "3.2.0",
-    "eslint": "8.2.0",
+    "cross-env": "^7.0.3",
+    "electron": "^16.0.1",
+    "electron-builder": "^22.14.5",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^8.2.0",
     "eslint-plugin-vue": "8.1.1",
-    "lint-staged": "12.0.3",
+    "lint-staged": "^12.0.3",
     "playwright": "1.16.3",
-    "simple-git-hooks": "2.7.0",
-    "typescript": "4.5.2",
-    "vite": "2.6.14",
-    "vue-tsc": "0.29.5"
+    "simple-git-hooks": "^2.7.0",
+    "typescript": "^4.5.2",
+    "vite": "^2.6.14"
   },
   "dependencies": {
-    "electron-updater": "4.6.2",
-    "vue": "3.2.22",
-    "vue-router": "4.0.12"
+    "@codemirror/commands": "^0.19.5",
+    "@codemirror/gutter": "^0.19.5",
+    "@codemirror/highlight": "^0.19.6",
+    "@codemirror/history": "^0.19.0",
+    "@codemirror/lang-javascript": "^0.19.3",
+    "@codemirror/lang-markdown": "^0.19.2",
+    "@codemirror/language": "^0.19.5",
+    "@codemirror/language-data": "^0.19.1",
+    "@codemirror/matchbrackets": "^0.19.3",
+    "@codemirror/state": "^0.19.6",
+    "@codemirror/theme-one-dark": "^0.19.1",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/parser": "^5.4.0",
+    "assert": "^2.0.0",
+    "electron-updater": "^4.6.1",
+    "eslint-config-prettier": "^8.3.0",
+    "github-markdown-css": "^5.0.0",
+    "process": "^0.11.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-react": "^9.0.1",
+    "spectron": "^15.0.0",
+    "unified": "^10.1.1"
   }
 }
