--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       release-note: ${{ steps.release-note.outputs.release-note }}
-      version: ${{ steps.version.outputs.build-version }}
 
     steps:
       - uses: actions/checkout@v2
@@ -53,7 +52,7 @@ jobs:
 
       - name: Get version from current date
         id: version
-        run: echo "::set-output name=build-version::$(node -e "try{console.log(require('./electron-builder.config.js').extraMetadata.version)}catch(e){console.error(e);process.exit(1)}")"
+        run: echo "::set-output name=current-version::$(node -e "try{console.log(require('./electron-builder.config.js').extraMetadata.version)}catch(e){console.error(e);process.exit(1)}")"
 
 
       - name: Waiting on All checks
@@ -64,7 +63,7 @@ jobs:
           running-workflow-name: 'draft'
 
       - name: Delete outdated drafts
-        uses: hugo19941994/delete-draft-releases@v1.0.0
+        uses: hugo19941994/delete-draft-releases@v0.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -75,8 +74,8 @@ jobs:
         with:
           prerelease: true
           draft: true
-          tag_name: v${{ steps.version.outputs.build-version }}
-          name: v${{ steps.version.outputs.build-version }}
+          tag_name: v${{ steps.version.outputs.current-version }}
+          name: v${{ steps.version.outputs.current-version }}
           body: ${{ steps.release-note.outputs.release-note }}
 
   upload_artifacts:
@@ -111,8 +110,6 @@ jobs:
       # Compile app and upload artifacts
       - name: Compile & release Electron app
         uses: samuelmeuli/action-electron-builder@v1
-        env:
-          VITE_APP_VERSION: ${{ needs.draft.outputs.version }}
         with:
           build_script_name: build
           args: --config electron-builder.config.js
