--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "electron-md-editor",
+  "name": "electron-mid-editor",
   "private": true,
-  "author": "Amane Misa",
   "keywords": [
     "Markdown",
     "remark",
     "CodeMirror",
     "Electron",
     "Vite",
-    "typescript"
+    "TypeScript"
   ],
+  "author": "Amane Misa",
+  "license": "MIT",
+  "engines": {
+    "node": ">=v14.16",
+    "npm": ">=7.7"
+  },
   "main": "packages/main/dist/index.cjs",
   "scripts": {
     "buildEnvTypes": "node scripts/buildEnvTypes.js",
@@ -27,57 +32,54 @@
     "typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer"
   },
   "browserslist": [
-    "Chrome 96"
+    "Chrome 91"
   ],
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged",
     "pre-push": "npm run typecheck"
   },
   "lint-staged": {
-    "*.{js,ts,vue}": "eslint --cache --fix"
+    "*.{js,ts}": "eslint --cache --fix"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@vitejs/plugin-vue": "1.9.4",
+    "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "cross-env": "^7.0.3",
-    "electron": "^16.0.1",
-    "electron-builder": "^22.14.5",
+    "electron": "^13.1.9",
+    "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.2.0",
-    "eslint": "^8.2.0",
-    "eslint-plugin-vue": "8.1.1",
-    "lint-staged": "^12.0.3",
-    "playwright": "1.16.3",
-    "simple-git-hooks": "^2.7.0",
-    "typescript": "^4.5.2",
-    "vite": "^2.6.14"
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "lint-staged": "^11.1.2",
+    "simple-git-hooks": "^2.5.1",
+    "spectron": "^15.0.0",
+    "typescript": "^4.3.5",
+    "vite": "^2.4.4"
   },
   "dependencies": {
-    "@codemirror/commands": "^0.19.5",
-    "@codemirror/gutter": "^0.19.5",
-    "@codemirror/highlight": "^0.19.6",
+    "@codemirror/commands": "^0.19.1",
+    "@codemirror/gutter": "^0.19.0",
+    "@codemirror/highlight": "^0.19.1",
     "@codemirror/history": "^0.19.0",
-    "@codemirror/lang-javascript": "^0.19.3",
-    "@codemirror/lang-markdown": "^0.19.2",
-    "@codemirror/language": "^0.19.5",
-    "@codemirror/language-data": "^0.19.1",
-    "@codemirror/matchbrackets": "^0.19.3",
-    "@codemirror/state": "^0.19.6",
-    "@codemirror/theme-one-dark": "^0.19.1",
-    "@types/react": "^17.0.35",
-    "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@codemirror/lang-javascript": "^0.19.1",
+    "@codemirror/lang-markdown": "^0.19.1",
+    "@codemirror/language": "^0.19.2",
+    "@codemirror/language-data": "^0.19.0",
+    "@codemirror/matchbrackets": "^0.19.1",
+    "@codemirror/state": "^0.19.0",
+    "@codemirror/theme-one-dark": "^0.19.0",
     "assert": "^2.0.0",
-    "electron-updater": "^4.6.1",
-    "eslint-config-prettier": "^8.3.0",
-    "github-markdown-css": "^5.0.0",
+    "electron-updater": "^4.4.4",
+    "github-markdown-css": "^4.0.0",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-parse": "^10.0.1",
-    "remark-react": "^9.0.1",
-    "spectron": "^15.0.0",
-    "unified": "^10.1.1"
+    "remark-gfm": "^2.0.0",
+    "remark-parse": "^10.0.0",
+    "remark-react": "^9.0.0",
+    "unified": "^10.1.0"
   }
 }
