--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "simple-git-hooks": "^2.5.1",
     "spectron": "^15.0.0",
     "typescript": "^4.3.5",
+    "ansi-regex": ">=5.0.1",
     "vite": "^2.4.4"
   },
   "dependencies": {
@@ -71,6 +72,7 @@
     "@codemirror/matchbrackets": "^0.19.1",
     "@codemirror/state": "^0.19.0",
     "@codemirror/theme-one-dark": "^0.19.0",
+    "@xmldom/xmldom": "^0.7.5",
     "assert": "^2.0.0",
     "electron-updater": "^4.4.4",
     "github-markdown-css": "^4.0.0",
