--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@codemirror/state": "^0.19.0",
     "@codemirror/theme-one-dark": "^0.19.0",
     "@xmldom/xmldom": "^0.7.5",
+    "ansi-regex": "^5.0.1",
     "assert": "^2.0.0",
     "electron-updater": "^4.4.4",
     "github-markdown-css": "^4.0.0",
