--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@codemirror/matchbrackets": "^0.19.1",
     "@codemirror/state": "^0.19.0",
     "@codemirror/theme-one-dark": "^0.19.0",
-    "@xmldom/xmldom": "^0.7.5",
+    "@xmldom/xmldom": "github:xmldom/xmldom",
     "ansi-regex": "^5.0.1",
     "assert": "^2.0.0",
     "electron-updater": "^4.4.4",
